<resources>
    <string name="app_name">FCStade</string>
    <string name="welcome">Fc Stade is a web and mobile application for booking available pitches and online football tournaments.</string>
    <string name="start">Get Started</string>
    <string name="first">enter your first name</string>
    <string name="last">enter your last name</string>
    <string name="username">enter your username</string>
    <string name="password">enter your password</string>
    <string name="confirmer_password">confirm your password</string>
    <string name="connexion_admin">connexion administrateur</string>
    <string name="connexion_user">connexion utilisateur</string>
    <string name="register">register</string>
    <string name="recycler_full_name">name of stadium</string>
    <string name="reserver">reserver</string>
    <string name="recycler_nombre_joueur">adresse of stadium</string>
    <string name="Add_stadium">Add Stadium</string>
    <string name="name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="user_name">Username:</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="age">entrez votre age</string>
    <string name="email">entrez votre email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>